--- a/images/chieu-cay-cao-bang-lua-18/config.ini
+++ b/images/chieu-cay-cao-bang-lua-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-18.html
 lastopen = 2024-06-09 22:41:28
 
 [search]
-lastsearch = 2024-08-09 18:11:56
+lastsearch = 2024-08-09 21:44:45
 
 [chieutruc.info]
 match = -60.0%%
@@ -14,7 +14,7 @@ url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 [demxanh.com]
 match = -28.0%%
 title = Bảng giá chiếu trúc Cao Bằng Tây Bắc mới nhất 2021
-url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html
+url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html?srsltid=AfmBOooz6wuJaEg0PnWLWGstYAFRvBIPdSR1Lc0yEg7Ceoo45Z_AubD5
 
 [shopee.vn]
 match = -64.0%%
@@ -69,7 +69,7 @@ url = https://antv.gov.vn/phap-luat-3/cong-an-cao-bang-bat-doi-tuong-lua-dao-hon
 [www.diepxuan.com]
 match = 32.0%%
 title = Chiếu cây Cao Bằng lụa 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-180x200.html?srsltid=AfmBOoo4W1PI3S9Ssni3sfa_SR-F0XHuicg2a-dr1-9LRZkF-L1_zaf8
+url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-180x200.html?srsltid=AfmBOopD9e34rw_1bQqlq12vFbFIUw9QiiAQ5mwhHL5HP3WDKf_Q_1cX
 
 [olm.vn]
 match = -48.0%%
