--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-09 19:24:01
+lastsearch = 2024-08-09 21:59:13
 
 [batdongsan.com.vn]
 match = -180.0%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Chiếu lác D2 08
 url = https://www.diepxuan.com/chieu-lac-d2-08.html
 
 [www.facebook.com]
-match = -66.7%%
-title = Baïeta - Cocktails & Chic tapas
-url = https://www.facebook.com/baietasaigon.restaurant/
+match = -240.0%%
+title = HOT&COLD D2 Toạ lạc tại:... - Hot Cold - Trà sữa & Xiên Que
+url = https://www.facebook.com/trasuaxienque/posts/hotcold-d2toạ-lạc-tại-32-đường-d2-phường-25-q-bình-thạnh-tp-hồ-chí-minhhotline-g/1200627010039097/
 
 [lacvietauction.vn]
 match = -80.0%%
