--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-08-09 20:46:53
+lastsearch = 2024-08-09 21:47:13
 
 [m.youtube.com]
 match = -144.4%%
@@ -18,8 +18,8 @@ url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.instagram.com]
 match = -144.4%%
-title = Thùy Ngân (@huuloc861) • Instagram photos and videos
-url = https://www.instagram.com/huuloc861/
+title = NEM CHAY SỐT KEM HẠNH NHÂN siêu ngon các đồng chí ơi. ...
+url = https://www.instagram.com/p/C9mD02RvBka/
 
 [www.facebook.com]
 match = 22.2%%
@@ -27,9 +27,9 @@ title = NEM Fashion - 𝐀́𝐎 𝐏𝐇𝐀𝐎
 url = https://www.facebook.com/story.php/?story_fbid=745952497567450&id=100064581196454
 
 [www.tiktok.com]
-match = -133.3%%
-title = Nem nướng Chấn Hưng gia truyền nổi tiếng ở quận 5 ...
-url = https://www.tiktok.com/@tinhtungtangvn/video/7350226094391364866
+match = -16.7%%
+title = Nem Nuong Que Huong Air Fryer
+url = https://www.tiktok.com/discover/nem-nuong-que-huong-air-fryer
 
 [www.youtube.com]
 match = -144.4%%
