--- a/images/ruot-goi-ke-everon-45x65-thap/config.ini
+++ b/images/ruot-goi-ke-everon-45x65-thap/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-thap.html
 lastopen = 2024-06-09 22:44:50
 
 [search]
-lastsearch = 2024-08-09 20:26:27
+lastsearch = 2024-08-09 21:48:37
 
 [www.everonvn.vn]
 match = 68.0%%
@@ -27,9 +27,9 @@ title = Ruột gối Everon Thư giãn cổ
 url = https://everonchinhhang.vn/products/ruot-goi-thu-gian-co
 
 [tiki.vn]
-match = 3.4%%
-title = Ruột gối everon 45x65 hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=ruột gối everon 45x65
+match = 6.9%%
+title = Ruột gối 45x65 hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=ruột gối 45x65
 
 [thegioichanra.com]
 match = 6.9%%
