--- a/images/chieu-dieu-hoa-khong-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-14.html
 lastopen = 2024-06-09 22:26:37
 
 [search]
-lastsearch = 2024-08-09 22:34:42
+lastsearch = 2024-08-09 23:43:24
 
 [shopee.vn]
-match = 0.0%%
-title = chiếu điều hoà giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu điều hoà
+match = 52.2%%
+title = Chiếu điều hoà siêu mát
+url = https://shopee.vn/Chiếu-điều-hoà-siêu-mát-i.62996878.1387569555
 
 [demxanh.com]
 match = 14.8%%
