--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-14.html
 lastopen = 2024-06-21 06:28:49
 
 [search]
-lastsearch = 2024-08-09 13:19:36
+lastsearch = 2024-08-09 23:43:03
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -17,9 +17,9 @@ title = Sơ đồ sân bay Tân Sơn Nhất ga nội địa, quốc tế MỚI N
 url = https://vinpearl.com/vi/so-do-san-bay-tan-son-nhat
 
 [www.facebook.com]
-match = -80.0%%
-title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
-url = https://www.facebook.com/phimhaygiare/
+match = -226.7%%
+title = Ways Station Bình Thạnh: 🏠 281 Nguyễn Văn Đậu, P.11, Q ...
+url = https://www.facebook.com/photo.php?fbid=1176105412820080&id=139181649845800&set=a.179106562519975&locale=en_GB
 
 [phongthuykyhoa.com]
 match = -73.3%%
@@ -87,9 +87,9 @@ title = D2 Club (Ma Cao, Trung Quốc) - Đánh giá - Tripadvisor
 url = https://www.tripadvisor.com.vn/Attraction_Review-g664891-d4925838-Reviews-D2_Club-Macau.html
 
 [m.facebook.com]
-match = -200.0%%
-title = Ways Station Bình Thạnh: 🏠 281 Nguyễn Văn Đậu, P. ...
-url = https://m.facebook.com/waysstation/photos/a.179106562519975/1189872421443379/?type=3
+match = -33.3%%
+title = tìm trẻ lạc d2 NGT Long Biên✌️✌️✌️✌️✌️
+url = https://m.facebook.com/groups/HocSinhHN/posts/1619809158664939/
 
 [www.youtube.com]
 match = -213.3%%
