--- a/images/chieu-truc-que-lam-loai-1-15/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-15.html
 lastopen = 2024-06-07 00:19:57
 
 [search]
-lastsearch = 2024-08-09 23:01:12
+lastsearch = 2024-08-09 23:39:34
 
 [thegioidemviet.vn]
 match = 32.1%%
@@ -37,9 +37,9 @@ title = Chiếu trúc hạt hàng chính hãng, giao nhanh - Tháng 7, 2024
 url = https://tiki.vn/search?q=chiếu trúc hạt
 
 [www.sendo.vn]
-match = -17.9%%
-title = Chiếu Trúc Hạt Quế Lâm 1m2, 1m5, 1m6, 1m8, 2m2 [Được ...
-url = https://www.sendo.vn/chieu-truc-hat-que-lam-1m2-1m5-1m6-1m8-2m2-duo-c-kie-m-ha-ng-32003669-117423285.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1722729600426_undefined_-1_cateLvl2_0_45_23_-1
+match = -28.6%%
+title = Chiếu Trúc 1M Siêu Chất, Giá Ưu Đãi, Khuyến Mãi Hấp Dẫn
+url = https://www.sendo.vn/chieu-truc-1m.htm
 
 [www.lazada.vn]
 match = 3.6%%
