--- a/images/nem-everon-120x200x9/config.ini
+++ b/images/nem-everon-120x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-120x200x9.html
 lastopen = 2024-06-06 17:09:43
 
 [search]
-lastsearch = 2024-08-09 21:12:46
+lastsearch = 2024-08-09 23:46:33
 
 [www.everonvn.vn]
 match = -105.0%%
@@ -59,7 +59,7 @@ url = https://www.lazada.vn/products/nem-dem-bong-ep-everon-gap-3-tien-loi-de-di
 [ru9.vn]
 match = -150.0%%
 title = Nệm lò xo 1m2 giá bao nhiêu? Bảng giá các thương hiệu tốt
-url = https://ru9.vn/blogs/magazine/nem-lo-xo-1m2-gia-bao-nhieu
+url = https://ru9.vn/blogs/magazine/nem-lo-xo-1m2-gia-bao-nhieu?srsltid=AfmBOorsjt0ie5A1b8ed3TaenTuiK-DSSYtceyK9fXSmmAuZ2n3D_c61
 
 [www.diepxuan.com]
 match = 0.0%%
@@ -74,7 +74,7 @@ url = https://everon.online/products/dem-song-everon
 [everonxuankhieu.vn]
 match = -90.0%%
 title = ĐỆM BÔNG ÉP EVERON - CÔNG TY CỔ PHẦN DỊCH VỤ ...
-url = https://everonxuankhieu.vn/dem-bong-ep-everon/
+url = https://everonxuankhieu.vn/dem-bong-ep-everon/?srsltid=AfmBOoqI3ISjlMiOy4U8nTeFJU7LYyaDWfZKcvhk5pD4rLE8N-m6sxQw
 
 [nemgiagoc.vn]
 match = -60.0%%
